k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order

  template:
    metadata:
      labels:
        app: order

    spec:
      containers:
      - name: order

        image: yash0717/order-service:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 5000
