k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product

  template:
    metadata:
      labels:
        app: product

    spec:
      containers:

      - name: product

        image: yash0717/product-service:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000
