k8s/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:
  selector:
    app: order

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
