k8s/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  selector:
    app: product

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

  type: ClusterIP
